<resources>

    <!-- Strings for Data Display -->
    <string name="app_name">GDWSApp</string>
    <string name="timestamp">Timestamp:</string>
    <string name="temp">Temp</string>
    <string name="temperature">Temperature: </string>
    <string name="xang">X Angle: </string>
    <string name="x">X</string>
    <string name="yang">Y Angle: </string>
    <string name="y">Y</string>
    <string name="zang">Z Angle: </string>
    <string name="z">Z</string>
    <string name="time">Time: </string>
    <string name="garage_state">Garage State:</string>
    <string name="state">State</string>

    <!-- Strings for Main Activity -->
    <string name="mobile">Enter Mobile #</string>
    <string name="add_num">Add Number</string>
    <string name="previous">Previous Page</string>
</resources>
