<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Time Block -->
        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/timeText"
            android:layout_alignLeft="@id/timeText"
            android:text="@string/timestamp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="gravity"
            android:hint="@string/time" />

        <!-- Temperature Block -->
        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tempText"
            android:layout_alignLeft="@id/tempText"
            android:text="@string/temperature"
            android:layout_below="@id/timeText"/>

        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="gravity"
            android:hint="@string/temp"
            android:layout_below="@id/textViewTime"/>

        <!-- X Angle Block -->
        <TextView
            android:id="@+id/xangText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xang"
            android:gravity="start"
            android:textAlignment="gravity"
            android:layout_below="@id/textViewTemp"/>

        <TextView
            android:id="@+id/textViewX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:gravity="end"
            android:textAlignment="gravity"
            android:layout_toEndOf="@id/xangText"
            android:layout_toRightOf="@id/xangText"
            android:layout_below="@id/tempText"/>

        <!-- Y Angle Block -->
        <TextView
            android:id="@+id/yangText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yang"
            android:gravity="start"
            android:textAlignment="gravity"
            android:layout_below="@id/xangText"/>

        <TextView
            android:id="@+id/textViewY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:gravity="end"
            android:textAlignment="gravity"
            android:layout_toEndOf="@id/yangText"
            android:layout_toRightOf="@id/yangText"
            android:layout_below="@id/textViewX"/>

        <!-- Z Angle Block -->
        <TextView
            android:id="@+id/zangText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zang"
            android:gravity="start"
            android:textAlignment="gravity"
            android:layout_below="@id/yangText"/>

        <TextView
            android:id="@+id/textViewZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/z"
            android:gravity="end"
            android:textAlignment="gravity"
            android:layout_toEndOf="@id/zangText"
            android:layout_toRightOf="@id/zangText"
            android:layout_below="@id/textViewY"/>

    </RelativeLayout>
</ScrollView>
